--- a/residualvm/residualvm.nuspec
+++ b/residualvm/residualvm.nuspec
@@ -3,7 +3,7 @@
 	<metadata>
 		<id>residualvm</id>
 		<title>ResidualVM</title>
-		<version>0.1.1</version>
+		<version>0.2.1</version>
 		<authors>ResidualVM Team</authors>
 		<owners>Adrián Arroyo</owners>
 		<summary>residualvm</summary>
@@ -18,6 +18,7 @@
 			<!-- <dependency id="simutrans" /> -->
 		</dependencies>
 		<releaseNotes>
+		0.2.0 - See http://residualvm.org/news/20141231/
 		0.1.1 - See http://residualvm.org/news/20130210/
 		</releaseNotes>
 	</metadata>
