--- a/coapp/coapp.nuspec
+++ b/coapp/coapp.nuspec
@@ -3,7 +3,7 @@
 	<metadata>
 		<id>coapp</id>
 		<title>CoApp</title>
-		<version>1.23.521.0</version>
+		<version>2.4.493.0-dev</version>
 		<authors>CoApp Contributors</authors>
 		<owners>Adrián Arroyo</owners>
 		<summary>coapp</summary>
